# Linux-NoteBook

./: .gitignore  .gitingore  Iptables.md  README.md  note
Code-Snap/: CMakeLists.txt
Code-Snap/01/: CMakeLists.txt  main.c
Code-Snap/01_CppPrimer/: CMakeLists.txt  StdTask.cpp  StdTask.h  String.cpp  String.h  TCPServer.cpp  TCPServer.h  Task.h  ThreadDemo.cpp  ThreadDemo.h  ThreadManager.cpp  ThreadManager.h  main.cpp
Code-Snap/01_CppPrimer/src/Util/: logger.cpp  logger.h  util.cpp  util.h
Code-Snap/01_CppPrimer/test/: LoggerTest.cpp  LoggerTest.h
Code-Snap/01_HMI/: CMakeLists.txt
Code-Snap/01_HMI/3rdpart/arm_qt5.1.0/: libQt5Core.so.5  libQt5Gui.so.5  libQt5Network.so.5  libQt5OpenGL.so.5  libQt5PrintSupport.so.5  libQt5Qml.so.5  libQt5Quick.so.5  libQt5Sql.so.5  libQt5V8.so.5  libQt5WebKitWidgets.so.5  libQt5Xml.so.5  libQt5XmlPatterns.so.5
Code-Snap/02/: CMakeLists.txt  main.cpp
Code-Snap/02_Boost/: README.md
Code-Snap/02_Boost/02_Boost/: BoostDemo.pro  ReadMe.md  main.cpp
Code-Snap/02_Boost/02_Boost.xcodeproj/: project.pbxproj
Code-Snap/02_Boost/02_Boost.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Code-Snap/03_Middleware/: README.md
Code-Snap/03_Middleware/01_WiFi/: CMakeLists.txt
Code-Snap/03_Middleware/Asn1Demo/: CMakeLists.txt
Code-Snap/03_Middleware/Asn1Demo/src/: Makefile.am.sample
Code-Snap/03_Middleware/Asn1Demo/tests/: CMakeLists.txt  Decoder.c
Code-Snap/03_Middleware/CV2X/: CMakeLists.txt  build_for_linux.sh  build_for_linux_app.sh  build_for_mac.sh
Code-Snap/03_Middleware/CV2X/3rdpart/: MWKit
Code-Snap/03_Middleware/CV2X/3rdpart/LinuxToolKit/: CMakeLists.txt  build_for_linux.sh
Code-Snap/03_Middleware/CV2X/3rdpart/armadillo/: docs.html
Code-Snap/03_Middleware/CV2X/3rdpart/csv/: csv_w.h
Code-Snap/03_Middleware/CV2X/html/: Node-RED _ xu7.co.html  index.html  websocket.html
Code-Snap/03_Middleware/CV2X/html/Node-RED _ xu7.co_files/: jsonata.min.js  red.min.js  style.min.css
Code-Snap/03_Middleware/CV2X/inc/: V2xAlgorithm.h  V2xAlgorithmAdapter.h  V2xAlgorithmScene.h  V2xAlgorithmTest.h  V2xApp.h  V2xBroker.h  V2xCarObjectMgnt.h  V2xException.h  V2xHvMapSpatCal.h  V2xMapQueue.h  V2xMsg.h  V2xMsgQueue.h  V2xReceiver.h  V2xReceiverProxy.h  V2xRvAsyncFilter.h  V2xRvFilter.h  V2xRvThreadPool.h  V2xSceneMsg.h  V2xSender.h  V2xSetting.h  V2xThread.h  V2xThreadPool.h  V2xType.h  V2xUnitsDef.h  V2xVechileHistory.h
Code-Snap/03_Middleware/CV2X/linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Code-Snap/03_Middleware/CV2X/src/: main.cpp
Code-Snap/03_Middleware/CV2X/src/test/: TestCANProducer.cpp  TestCANProducer.h  TestGNSSProducer.cpp  TestGNSSProducer.h  TestITSProducer.cpp  TestITSProducer.h
Code-Snap/03_Middleware/CV2X/src/v2x/: MsgQueue.h  V2xAlgorithm.cpp  (+20 more)
Code-Snap/03_Middleware/CV2X/tests/: CMakeLists.txt  converter-sample.c  test_algorithm.cpp  test_csv.cpp  test_decode.cpp  test_encode.cpp  test_httpclient.cpp  test_rv_bsm.cpp  test_setting.cpp  test_share_ptr.cpp  test_tcpClient.cpp  test_threadpool.cpp
Code-Snap/03_Middleware/MWKit/: CMakeLists.txt
Code-Snap/03_Middleware/MWKit/3rdpart/: LinuxToolKit
Code-Snap/03_Middleware/MWKit/src/: Broker.cpp  Broker.h  Consumer.cpp  Consumer.h  MsgQueue.h  Producer.cpp  Producer.h
Code-Snap/03_Middleware/MWKit/tests/: CMakeLists.txt
Code-Snap/04_Interview/: README.md
Code-Snap/04_Interview/Algorithm/: CMakeLists.txt  XString.cpp  XString.h  main.cpp
Code-Snap/04_Interview/C-Project/: CMakeLists.txt  a.out  test.c
Code-Snap/04_Interview/Cpp-Project/: 容器 Containers.md
Code-Snap/04_Interview/Cpp-Project/Containers/: AlgorithmSTL.cpp  AlgorithmSTL.h  AssociativeContainers.cpp  AssociativeContainers.h  CMakeLists.txt  ContainerAdaptor.cpp  ContainerAdaptor.h  SequenceContainer.cpp  SequenceContainer.h  Type.h  main.cpp
Code-Snap/04_Interview/Cpp-Project/Containers.xcodeproj/: project.pbxproj
Code-Snap/04_Interview/Cpp-Project/String/: CMakeLists.txt  XString.cpp  XString.h  main.cpp
Code-Snap/04_Interview/Cpp-Project/Thread/: CMakeLists.txt  main.cpp
Code-Snap/04_Interview/interview/: CMakeLists.txt
Code-Snap/04_Interview/interview/interview/: main.cpp
Code-Snap/04_Interview/interview/interview.xcodeproj/: project.pbxproj
Code-Snap/05_ARM/: CMakeLists.txt
Code-Snap/07_Crash/: CMakeLists.txt  main.cpp
Code-Snap/08_Base/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  main.cpp
Code-Snap/08_Qt/: CMakeLists.txt
Code-Snap/08_libxml/: CMakeLists.txt  main.cpp
Code-Snap/09Qt/: CMakeLists.txt
Code-Snap/09Qt/data/: index.html
Code-Snap/09Qt/src/: MyObject.cpp  MyObject.h  main.cpp
Code-Snap/LinuxToolKit/: CMakeLists.txt  README.md  build_for_linux.sh  main.cpp
Code-Snap/LinuxToolKit/src/Common/: Parser.cpp  Parser.h  config.cpp  config.h
Code-Snap/LinuxToolKit/src/Http/: HttpChunkedSplitter.cpp  HttpChunkedSplitter.h  HttpClient.cpp  HttpClient.h  HttpClientImp.cpp  HttpClientImp.h  HttpCookie.cpp  HttpCookie.h  HttpRequestSplitter.cpp  HttpRequestSplitter.h  HttpRequester.cpp  HttpRequester.h  strCoding.cpp  strCoding.h
Code-Snap/LinuxToolKit/src/Network/: Buffer.cpp  Buffer.h  SockUtil.cpp  SockUtil.h  Socket.cpp  Socket.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h  sockutil.cpp  sockutil.h
Code-Snap/LinuxToolKit/src/Poller/: EventPoller.cpp  EventPoller.h  Pipe.cpp  Pipe.h  PipeWrap.cpp  PipeWrap.h  SelectWrap.cpp  SelectWrap.h  Timer.cpp  Timer.h
Code-Snap/LinuxToolKit/src/Thread/: TaskExecutor.h  ThreadGroup.h  ThreadPool.h  ThreadPoolResult.cpp  ThreadPoolResult.h  WorkThreadPool.cpp  semaphore.h
Code-Snap/LinuxToolKit/src/Util/: Logger.h  Mini.h  NoticeCenter.cpp  NoticeCenter.h  OnceToken.h  RecycleResourcePool.h  ResourcePool.h  SSLBox.cpp  SSLBox.h  SSLUtil.cpp  TimeTicker.h  Util.cpp  Util.h  function_traits.h  logger.cpp  logger.h  onceToken.h  util.cpp  util.h  uv_errno.cpp  uv_errno.h
Code-Snap/LinuxToolKit/test/: LoggerTest.cpp  LoggerTest.h
Code-Snap/LinuxToolKit/tests/: LoggerTest.cpp  TestCase.cpp  main.cpp  test_noncopy.cpp  test_resourcePool.cpp
(+374 files in other folders)
